--- a/app1/app1/Info.plist
+++ b/app1/app1/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Need for save</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Need for select photo</string>
 	<key>NSCameraUsageDescription</key>
